[tool.poetry]
name = "datastreams"
version = "0.1.0"
description = ""
authors = ["Emanuele Panizio <panc86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"
pmaw = "*"
requests = "*"

[tool.poetry.group.dev.dependencies]
jupyter = "*"
ipykernel = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
